test/conformance/chainsaw/ttl/propagation-policy/background-policy_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-background
  annotations:
    "kyverno.io/cleanup-policy": "Background"
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: propagate-background-policy
spec:
  rules:
    - name: cleanup-policy-background
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "The cleanup policy should be Background"
        pattern:
          metadata:
            annotations:
              "kyverno.io/cleanup-policy": "Background"
