test/conformance/chainsaw/ttl/propagation-policy/chainsaw-test.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cleanup-policy-tests
spec:
  steps:
    - name: Foreground Policy Test
      try:
        - apply:
            file: policy-test.yaml
        - assert:
            file: assert-test.yaml

    - name: Background Policy Test
      try:
        - apply:
            file: policy-test.yaml
        - assert:
            file: assert-test.yaml

    - name: Orphan Policy Test
      try:
        - apply:
            file: policy-test.yaml
        - assert:
            file: assert-test.yaml
