test/conformance/chainsaw/ttl/propagation-policy/assert-test.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Assert
metadata:
  name: assert-foreground
spec:
  rules:
    - name: assert-cleanup-foreground
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "The cleanup policy must be Foreground"
        pattern:
          metadata:
            annotations:
              "kyverno.io/cleanup-policy": "Foreground"

---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Assert
metadata:
  name: assert-background
spec:
  rules:
    - name: assert-cleanup-background
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "The cleanup policy must be Background"
        pattern:
          metadata:
            annotations:
              "kyverno.io/cleanup-policy": "Background"

---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Assert
metadata:
  name: assert-orphan
spec:
  rules:
    - name: assert-cleanup-orphan
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "The cleanup policy must be Orphan"
        pattern:
          metadata:
            annotations:
              "kyverno.io/cleanup-policy": "Orphan"
